--- a/.gitignore
+++ b/.gitignore
@@ -17,14 +17,9 @@
 *.db-wal
 *.opendb
 Browse.VC.db
-<<<<<<< HEAD
-
-Intermediates/
-ipch/
-.vs/CiG Engine/v16/Browse.VC.db
-=======
 Intermediates/
 ipch/
 .vs/CiG Engine/v16/Browse.VC.db
 *.db
->>>>>>> Leon
+
+dir_to_ignore/.vs
