--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.tlog
 *.tlog/
 *.lastbuildstate
+*.exe
 
 *.sdf
 *.user
@@ -22,3 +23,4 @@ ipch/
 .vs/CiG Engine/v16/Browse.VC.db
 *.db
 dir_to_ignore/.vs
+dir_to_ignore/x64
